--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
   "name": "portfolio-website-safal-oli",
   "version": "1.0.0",
-  "description": "Modern portfolio website for BCA student showcasing projects and skills",
+  "description": "Portfolio website for Safal Oli",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'Build completed'",
-    "test": "echo 'No tests specified'"
+    "dev": "npm run build:css && concurrently \"npm run watch:css\" \"nodemon server.js\"",
+    "build:css": "postcss public/css/input.css -o public/css/style.css",
+    "watch:css": "postcss public/css/input.css -o public/css/style.css --watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["portfolio", "website", "bca", "student", "nepal"],
+  "keywords": [
+    "portfolio",
+    "website",
+    "nodejs",
+    "express"
+  ],
   "author": "Safal Oli",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7",
-    "@supabase/supabase-js": "^2.38.4",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5"
+    "cors": "^2.8.5",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.1",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postcss-cli": "^11.0.0"
   }
 }
+
